# sharepointlib

./: Cargo.toml  DEV.md  LICENSE.txt  README.md  pyproject.toml  requirements
.github/workflows/: CI.yml
old_python_version/sharepointlib/: __init__.py  sharepoint.py
scripts/: run_print_me.py
sharepointlib/: __main__.py  models.py  print_me_funcs.py  sharepoint.py
src/: lib.rs  models.rs  python_bindings.rs
tests/: test_live_sharepoint.py  test_smoke.py
