[package]
name = "sharepointlib"
version = "0.1.4"
edition = "2024"
description = "Microsoft SharePoint client package powered by Rust and PyO3."
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/aghuttun/sharepointlib"
homepage = "https://github.com/aghuttun/sharepointlib"
documentation = "https://github.com/aghuttun/sharepointlib/blob/main/README.md"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
regex = "1"
urlencoding = "2"
pyo3 = { version = "0.23", optional = true, features = ["abi3-py310", "extension-module"] }
